[gd_scene load_steps=7 format=2]

[ext_resource path="res://Music/sfx_blip.wav" type="AudioStream" id=1]
[ext_resource path="res://Scripts/cursor.gd" type="Script" id=2]
[ext_resource path="res://Music/sfx_warp.wav" type="AudioStream" id=3]
[ext_resource path="res://Art/cursor.png" type="Texture" id=4]
[ext_resource path="res://Music/sfx_thud.wav" type="AudioStream" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 8.0

[node name="Cursor" type="Area2D"]
position = Vector2( 160, -96 )
input_pickable = false
monitorable = false
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Cursor" type="Sprite" parent="."]
texture = ExtResource( 4 )
vframes = 3
frame = 1

[node name="NoGoCast" type="RayCast2D" parent="."]
enabled = true
collision_mask = 2

[node name="sfx_warp" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="sfx_thud" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[node name="sfx_blip" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 1 )

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
